--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=products
-server.port=8090
+server.port=${SERVER_PORT}
 management.endpoints.web.exposure.include=httptrace
 management.trace.http.include=REQUEST_HEADERS,RESPONSE_HEADERS,COOKIES,PRINCIPAL
